opa/no-root-containers.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: norootcontainers
spec:
  crd:
    spec:
      names:
        kind: NoRootContainers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package norootcontainers

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext
          msg := sprintf("Container '%v' must define securityContext", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container '%v' must not run as root", [container.name])
        }
